@@ -1,15 +1,42 @@
 from point import Point
 from cell  import Cell
 
+# Used to get random cells.
 from random import randint
 
 class GridError(Exception):
+  """Generic Grid Error Exceptions"""
   pass
 
 class GridBoundsError(GridError):
+  """An Error for when a given point is out a grid's bounds."""
   pass
 
 class Grid(dict):
+  """
+  A grid object is actually a dictionary, with the points (of
+  class Point) being the keys. The upper left of the grid is
+  position (1, 1).
+
+  For methods that have an 'include_empty' argument, they will 
+  only return cells that actually have content set (that is, not
+  the default value given the class) unless this argument is set to
+  true, in which case, those cells that don't have content will be
+  set to the default value given this class when initialized.
+
+  The class tries to use the set_cell() and get_cell() methods as
+  often as needed, to keep the interface consistant. If this is too
+  slow, it is very easily to wrap the object in calls that use the
+  dict interface as needed.
+
+  All data from cells returned are instances of the Cell class,
+  which has .point and .content properties that keep track of that
+  cell's grid position and data, respectively. If you need to make
+  the cell able to be serialized, you can call it's as_tuple()
+  method. For example, the .copy() method could have used straight up
+  copy[point] = self[point], but that would skip set_cell/get_cell 
+  checks.
+  """
 
   def __init__(self, sizex=3, sizey=3, default=None):
     self.sizex   = abs(sizex)
@@ -19,6 +46,11 @@ class Grid(dict):
     self._set_corners()
 
   def points(all=False):
+    """
+    Returns a list of all points in the grid if the 'all' 
+    argument is true, otherwise it returns a list of only
+    those points that are set with content.
+    """
     if all:
       all = []
 
@@ -31,11 +63,19 @@ class Grid(dict):
       return self.keys()
 
   def is_sane(self, point):
+    """
+    A point is considered sane if it is greater than 1 and less then
+    the x and y sizes.
+    """
     return (1 <= point.x <= self.sizex) and (1 <= point.y <= self.sizey)
 
   def set_cell(self, point, data):
     if self.is_sane(point):
       self[point] = Cell(point, data)
+
+  def set_cells(self, points, data):
+    for point in points:
+      self.set_cell(point, data)
 
   def get_cell(self, point, include_empty=False):
     if self.has_key(point):
@@ -49,13 +89,30 @@ class Grid(dict):
     cells = []
 
     for point in points:
-      if self.is_sane(point):
-        cell = self.get_cell(point, include_empty)
+      cell = self.get_cell(point, include_empty)
 
-        if cell or include_empty:
-          cells.append(cell)
+      if cell or include_empty:
+        cells.append(cell)
 
     return cells
+
+  def move_cell(self, fp, tp):
+    """
+    Tries to move the content from the point at fp to the point at
+    tp. If either fp or tp is outside the bounds of the grid, a
+    GridBoundsError is raised. Returns True if the cell was moved
+    else it returns False.
+    """
+    for point in [fp, tp]:
+      if not self.is_sane(point):
+        raise GridBoundsError, '%s out of bounds!' % point
+
+    if self.has_key(fp):
+      self.set_cell(tp, self[fp].content)
+      self.clear_cell(fp)
+      return True
+    else:
+      return False
 
   def get_row(self, y, include_empty=False):
     cells = []
@@ -86,18 +143,23 @@ class Grid(dict):
       del self[point]
 
   def clear_all(self):
+    """Removes all cells!"""
     for point in self.keys():
       del self[point]
 
   def neighbors(self, point, include_empty=False):
+    """
+    Returns all cells that are adjacent neighbors of the value of
+    point, going from left to right, top to bottom, skipping the 
+    cell of point itself.
+    """
     cells = []
 
     for vector in Point.vectors:
       if vector == Point.Center:
         continue
 
-      vp = Point.from_vector(vector)
-      np = point + vp
+      np = point + Point.from_vector(vector)
 
       if self.is_sane(np):
         cell = self.get_cell(np, include_empty)
@@ -108,6 +170,10 @@ class Grid(dict):
     return cells
 
   def traverse(self, point, vector, include_empty=False):
+    """
+    Returns all cells starting at point and going in vector
+    direction, until the edge of the grid is reached.
+    """
     cells  = []
     vector = Point.from_vector(vector)
 
@@ -122,6 +188,13 @@ class Grid(dict):
     return cells
 
   def swap_cells(self, point1, point2):
+    """
+    Will attempt to swap the contents of the two cells given by 
+    point1 and point2. If both cells are set, the content is switched.
+    If there is one or the other cell, but not both, then the content 
+    is moved as needed. If a switch took place, the method returns
+    True, otherwise it returns False.
+    """
     for point in [point1, point2]:
       if not self.is_sane(point):
         raise GridBoundsError, '%s out of bounds!' % point
@@ -156,19 +229,11 @@ class Grid(dict):
     # We swapped something, so return True.
     return True
 
-  def move_cell(self, fp, tp):
-    for point in [fp, tp]:
-      if not self.is_sane(point):
-        raise GridBoundsError, '%s out of bounds!' % point
-
-    if self.has_key(fp):
-      self.set_cell(tp, self[fp].content)
-      self.clear_cell(fp)
-      return True
-    else:
-      return False
-
   def contents(self, include_empty=False):
+    """
+    Returns all cells of the grid. This data can be used to populate
+    a grid using that grids .populate() method.
+    """
     cells = []
 
     for point in self.keys():
@@ -180,6 +245,11 @@ class Grid(dict):
     return cells
 
   def populate(self, cells=[]):
+    """
+    This method takes a list of cell objects, and uses those to 
+    populate this grid. If any point is outside the target grid's
+    bounds, the cell is ignored. Returns how many cells were set.
+    """
     n = 0
 
     for cell in cells:
@@ -193,11 +263,17 @@ class Grid(dict):
     return n
 
   def random_cell(self, include_empty=False):
+    """Returns a random cell!"""
     x = randint(1, self.sizex)
     y = randint(1, self.sizey)
     return self.get_cell(Point(x, y), include_empty)
 
   def random_cells(self, how_many, include_empty=False):
+    """
+    Returns a list of N or less random cells, where N is set by
+    the 'how_many' argument. If the 'include_empty' argument is
+    False, then you may get less than N items.
+    """
     cells = []
 
     for i in range(how_many):
@@ -206,12 +282,23 @@ class Grid(dict):
     return cells
 
   def number_of_cells(self, include_empty=True):
+    """
+    Returns the number of set cells if 'include_empty' is set to
+    False, otherwise, returns the total number of cells in the 
+    grid.
+    """
     if include_empty:
       return self.sizex * self.sizey
     else:
       return len(self.keys())
 
   def resize(self, sizex=3, sizey=3):
+    """
+    This method resizes the grid; if the grid is smaller than the
+    previous size, then all content in cells that would now lie 
+    outside of the newly sized grid are lost. If they are important,
+    you can use .contents() to back them up first.
+    """
     self.sizex = abs(sizex)
     self.sizey = abs(sizey)
 
@@ -222,6 +309,10 @@ class Grid(dict):
         del self[point]
 
   def copy(self):
+    """
+    This returns a new Grid object of the same size and same default,
+    with all cells set to mirror this grid's cells.
+    """
     newgrid = Grid(self.sizex, self.sizey, self.default)
 
     for cell in self.contents():
@@ -230,6 +321,12 @@ class Grid(dict):
     return newgrid
 
   def sub(self, point, width=2, height=None):
+    """
+    This returns a new Grid object that is a snapshot of a subregion
+    of this grid's contents, starting at point and grabbing 
+    width x height number of cells.
+    """
+
     # Default to an N x N grid.
     if not height:
       height = width
@@ -251,16 +348,21 @@ class Grid(dict):
 
     return grid
 
-  def print_grid(self):
-    print self
-
   def _set_corners(self):
+    """
+    This sets the grid's corner properties, which can be used
+    to check bounds, among other things.
+    """
     self.bl = Point(1, 1)
     self.tl = Point(1, self.sizey)
     self.br = Point(self.sizex, 1)
     self.tr = Point(self.sizex, self.sizey)
 
   def __str__(self):
+    """
+    Builds a string view of the grid. Not overly useful unless your
+    contents are single-character, printable strings.
+    """
     rets = []
     szy  = self.sizey + 1
     fmt  = '|'.join([' %s '] * szy)
