@@ -1,4 +1,7 @@
 2012-04-13
+* Added documentation to the Grid class.
+* Removed Grid.print_grid, since it wasn't needed. Use 'print' on the
+  object itself.
 * Added Grid.sub(point, width, height) method that will return a new Grid 
   object consisting of Cells of width x height, starting at the cell
   located at point. See README.md for an example.
